force-app/main/default/objects/FieloEE__LevelCriteria__c/FieloEE__LevelCriteria__c.object-meta.xml
<CustomObject>
    <description>Criteria that determine the level of a member in your program.</description>
    <label>Level Criteria</label>
    <nameField>
        <label>Level Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Level Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>