force-app/main/default/objects/FieloEE__LevelCriteria__c/fields/FieloEE__FieldName__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__FieldName__c</fullName>
    <description>In order to make a rule, it is necessary to choose fields to make a logical structure.</description>
    <label>Field Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>