force-app/main/default/objects/FieloEE__LevelCriteria__c/fields/FieloEE__Level__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Level__c</fullName>
    <description>Level for the rule.</description>
    <label>Level</label>
    <referenceTo>FieloEE__Level__c</referenceTo>
    <relationshipLabel>Level Criterias</relationshipLabel>
    <relationshipName>LevelCriterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>