force-app/main/default/objects/FieloEE__LevelCriteria__c/fields/FieloEE__NumberValue__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__NumberValue__c</fullName>
    <description>Numerical value.</description>
    <label>Number Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>