force-app/main/default/objects/FieloEE__LevelCriteria__c/fields/FieloEE__Operator__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Operator__c</fullName>
    <description>Each value of this picklist allows to make a logical structure with fields selected.</description>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>equals</fullName>
            </value>
            <value>
                <fullName>not equals</fullName>
            </value>
            <value>
                <fullName>greater than</fullName>
            </value>
            <value>
                <fullName>greater or equal</fullName>
            </value>
            <value>
                <fullName>less than</fullName>
            </value>
            <value>
                <fullName>less or equal</fullName>
            </value>
            <value>
                <fullName>contains</fullName>
            </value>
            <value>
                <fullName>not contains</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>