force-app/main/default/objects/FieloEE__LevelCriteria__c/fields/FieloEE__Values__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Values__c</fullName>
    <label>Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>